--- a/GitDemo02/Pages/Index.cshtml
+++ b/GitDemo02/Pages/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome alex</h1>
+    <h1 class="display-4">Hi Josh, pls review this change</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
